# tim-mail-monitor

./: .env.example  .gitignore  README.md
apps/web/: README.md  next.config.ts  package-lock.json  package.json
apps/web/src/app/: icon.tsx  (+3 more)
docs/: README.md  architecture-overview.md  llm-classification.md  mailbox-ingestion.md  milestone-1.md  schema-plan.md
services/worker/: README.md  pyproject.toml
services/worker/src/tim_mail_monitor_worker/: __init__.py  __main__.py  ai_extractor.py  api.py  config.py  db.py  digest.py  event_detector.py  filters.py  graph_client.py  health.py  mail_sync.py  main.py  message_normalizer.py  models.py  notifications.py  permissions.py  reply_state.py  thread_builder.py  thread_state_updater.py  volume_report.py
supabase/: README.md
supabase/migrations/: 20260401131000_create_ingestion_foundation.sql  20260401132000_add_ingestion_indexes.sql  20260402100000_add_thread_dashboard_fields.sql  20260402110000_add_trigger_fields.sql  20260403100000_rework_thread_operational_model.sql  20260403100000_rework_thread_workflow.sql  20260403103000_add_thread_correspondent_fields.sql  20260403110000_add_llm_classification_support.sql  20260403113000_add_thread_card_header.sql  20260403114000_add_classification_card_header.sql  20260406103000_add_staffing_signal_fields.sql  20260406170000_add_expired_review_state.sql  20260407110000_add_attachment_download_policy.sql  20260408090000_add_user_roles_for_app_access.sql  20260408103000_add_access_audit_and_seed_leads.sql
supabase/seed/: 20260401133000_mailbox_ingestion_example.sql  README.md
(+35 files in other folders)
